--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 .page {
-  margin: 0;
+  min-width: 1122px;
+  min-height: 1750px;
   padding: 0;
+  margin: 0;
 
   font-family: "PT Sans Narrow", Arial, sans-serif;
   font-size: 14px;
@@ -47,16 +56,75 @@
 .button:active {
   background-color: #663d15;
 }
+.content-layout {
+  width: 940px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
 
-.page-header__nav {
-  font-size: 16px;
-  line-height: 20px;
-  color: #fff;
+.page-header {
+  margin-bottom: 75px;
+}
+.inner-page .page-header {
+  margin-bottom: 50px;
 
   background-color: #000;
 }
+.page-header__nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+}
+.inner-page .page-header__nav {
+  flex-direction: row;
+  align-items: flex-start;
+}
+.page-header__logo {
+  width: 368px;
+  height: 153px;
+  order: 2;
+}
+.inner-page .page-header__logo {
+  width: 111px;
+  height: 24px;
+  padding: 23px 20px;
+  order: 0;
+}
+.page-header__img {
+  width: 100%;
+  height: auto;
+}
+.page-nav__bg {
+  width: 100%;
+  margin-bottom: 60px;
+
+  background-color: #000;
+}
+.page-nav__bg .content-layout {
+  display: flex;
+  justify-content: space-between;
+}
 .page-nav {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+
   list-style: none;
+}
+.page-nav__main {
+  width: 620px;
+}
+.page-nav__user {
+  width: 140px;
+}
+.inner-page .page-nav__user {
+  margin-left: auto;
 }
 .page-nav__link {
   color: #fff;
@@ -66,20 +134,40 @@
   background-color: #242424;
 }
 
+.features {
+  margin-bottom: 80px;
+}
 .features__list {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+
   list-style: none;
 }
 .features__item {
+  width: 300px;
+
   text-align: center;
 }
 
 .index-column {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 80px;
+  margin-bottom: 35px;
   color: #000;
 
   background-color: #f8f5f2;
   background-image: url("../img/bg.jpg");
   background-position: 0 0;
   background-repeat: repeat;
+}
+.news {
+  width: 380px;
+}
+.gallery {
+  width: 300px;
 }
 .news__list {
   list-style: none;
@@ -92,6 +180,12 @@
   border: 7px solid #fff;
 }
 
+.contacts {
+  width: 380px;
+}
+.appointment {
+  width: 300px;
+}
 .contacts__phone-link {
   color: #000;
 }
@@ -106,12 +200,26 @@
 }
 
 .page-footer {
+  padding: 60px 0;
+  margin-top: 65px;
+
   color: #fff;
 
   background-color: #212121;
   background-image: url("../img/footer-bg.jpg");
   background-position: 0 0;
   background-repeat: repeat;
+}
+.inner-page .page-footer {
+  margin-top: 45px;
+}
+.page-footer .content-layout {
+  display: flex;
+}
+.page-footer__contacts {
+  width: 320px;
+  margin: 0;
+  margin-right: 80px;
 }
 .page-footer__link {
   color: #fff;
@@ -125,6 +233,9 @@
   color: #fff;
 }
 .page-footer__social {
+  width: 145px;
+  margin: 0;
+
   text-align: center;
 }
 .page-footer__social-list {
@@ -134,6 +245,10 @@
   color: #fff;
 }
 .page-footer__copyright {
+  width: 150px;
+  margin: 0;
+  margin-left: auto;
+
   text-align: center;
 }
 .page-footer__button:hover,
@@ -174,11 +289,21 @@
   text-decoration: none;
 }
 
-.container-inner {
+.content-inner {
   color: #000;
+}
+.content-header__headline {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 15px;
 }
 
 .breadcrumbs__list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 50px;
+
   list-style: none;
 }
 .breadcrumbs__link {
@@ -192,6 +317,15 @@
   color: #aba9a7;
 }
 
+.catalog-columns {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.filters {
+  width: 180px;
+}
 .filters__form-fieldset {
   border: none;
 }
@@ -204,15 +338,31 @@
   color: #663d15;
 }
 .filters__form-input:disabled + .filters__form-label {
-  color: #000;
+  color: #aba9a7;
 }
 
+.products {
+  width: 700px;
+}
 .products__list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 25px;
+
   list-style: none;
 }
 .products__card {
+  width: 220px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+
   background-color: #f7f7f7;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+.products__card:nth-child(3n) {
+  margin-right: 0;
 }
 .products__card:hover {
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
@@ -237,6 +387,9 @@
   line-height: 18px;
 }
 .products__pagination{
+  padding: 0;
+  margin: 0;
+
   list-style: none;
 }
 .products__pagination-link {
@@ -263,6 +416,9 @@
   background-color: #fff;
 }
 
+.card-gallery {
+  width: 460px;
+}
 .card-gallery__full {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
@@ -273,6 +429,9 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
+.card-info {
+  width: 390px;
+}
 .card-info__vendor-code {
   text-align: right;
   color: #aeaeae;
@@ -291,6 +450,34 @@
   line-height: 48px;
 }
 
+.equipment {
+  width: 380px;
+  margin-bottom: 45px;
+}
 .equipment__list {
+  padding: 0;
+  margin: 0;
+
   list-style: none;
+}
+
+.service-price {
+  width: 460px;
+  margin-bottom: 45px;
+}
+
+.about-us {
+  width: 380px;
+}
+.about-us__headline {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.advantages {
+  width: 380px;
+  margin-right: 80px;
+}
+.advantages__info {
+  margin-top: 60px;
 }
